# Jarvis

./: .gitignore  README.md  main.py
backend/: .env.example  docker-compose.postgres-test.yml  main.py  pyproject.toml
backend/app/: main.py  realtime_redis_broker.py  worker.py
backend/app/api/: routes.py  ws.py
backend/app/core/: config.py  session_assets.py  workspace.py
backend/app/db/: session.py
backend/app/mcp/: __init__.py  client.py  registry.py  transport_http.py
backend/app/models/: __init__.py  entities.py
backend/app/providers/: __init__.py  base.py  capabilities.py  factory.py  openai_adapter.py  volcengine_asr_provider.py  volcengine_tts_provider.py
backend/app/runtime/: manager.py
backend/app/schemas/: approvals.py  assets.py  (+13 more)
backend/evals/: __init__.py  cli.py  models.py  runner.py  runtime_adapter.py
backend/scripts/: run_postgres_concurrency_tests.sh
backend/tests/: test_agent_service_queries.py  test_asset_ingestion_service.py  test_asset_runtime_tools.py  test_context_runtime.py  test_eval_runner.py  test_event_delivery.py  test_evidence_verifier.py  test_git_session_awareness.py  test_image_generation_service.py  test_phase1_durable_state.py  test_postgres_concurrency.py  test_redis_event_broker.py  test_runtime_housekeeping.py  test_runtime_observability.py  test_runtime_roles.py  test_service_list_queries.py  test_session_assets_foundation.py  test_speech_generation_service.py  test_subagent_runtime_isolation.py  test_tavily_search_service.py  test_tool_broker_structured_tools.py  test_turn_execution_jobs.py  test_verification_reviewer_service.py  test_volcengine_asr_provider.py  test_volcengine_tts_provider.py  test_worktree_service.py
services/feishu_mcp_server/: .env.example  README.md  pyproject.toml
(+154 files in other folders)
