[project]
name = "jarvis-backend"
version = "0.1.0"
description = "Backend runtime for the Jarvis Tauri agent cockpit."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "pydantic>=2.8,<3.0",
  "certifi>=2024.0.0",
  "python-multipart>=0.0.20,<1.0",
  "Pillow>=10.0,<13.0",
  "pypdf>=5.0,<7.0",
  "python-docx>=1.1,<2.0",
  "openpyxl>=3.1,<4.0",
  "python-pptx>=1.0,<2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
